# cosc-499-w2025-capstone-project-project-starter

./: .coverage  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Database-Docker instructions.md  Dockerfile  Dockerfile .yml  Dockerfile.api  Dockerfile.worker  MichelleZhouPersonalLog.md  ParsaPersonallog.md  README.md  README_API.md  README_Docker.md  ShuyuYanPersonalLog.md  TECH_STACK.md  TeamLog.md  YuxuanSunPersonalLog.md  alembic.ini  clean_db_errors.py  config.json  consent_document.md  database.sql  docker-compose.yml  et --hard HEAD@{1}  job_description.txt  job_match_manual_demo.py  main.py  mysql.cnf  package-lock.json  package.json  pyproject.toml  pytest.ini  query_skills.py  raunak_log.md  requirements-dev.txt  requirements.md  (+10 more)
backend/: Dockerfile  __init__.py  pyproject.toml  requirements.txt  setup.cfg  tests_patch.py
backend/src/: __init__.py  display.py  main.py  state.py
backend/src/analyzer/: README.md  __init__.py  llm_remote_media_analyzer.py  project_detector.py  skills_extractor.py
backend/src/analyzer/llm/: __init__.py  client.py  skill_progress_summary.py
backend/src/api/: README.md  __init__.py  analysis_routes.py  auth_routes.py  consent_routes.py  dependencies.py  llm_routes.py  main.py  portfolio_routes.py  profile_routes.py  project_routes.py  resume_routes.py  selection_routes.py  spec_routes.py  upload_routes.py
backend/src/api/models/: portfolio_item_models.py
backend/src/api/routes/: analysis.py  snapshots.py
backend/src/auth/: README.md  __init__.py  consent.py  consent_validator.py  session.py
backend/src/cli/: CLI_GUIDE.md  __init__.py  app.py  archive_utils.py  daemon_linux_driver.py  display.py  language_stats.py  message_utils.py  parse_zip.py  screens.py  state.py  textual_app.py  textual_app.tcss  widgets.py
backend/src/cli/services/: __init__.py  ai_service.py  analysis_api_service.py  auth_api_service.py  code_analysis_service.py  config_api_service.py  consent_api_service.py  contribution_analysis_service.py  duplicate_detection_service.py  encryption.py  export_service.py  portfolio_item_service.py  portfolio_timeline_service.py  preferences_service.py  project_overrides_service.py  projects_api_service.py  projects_service.py  resume_api_service.py  resume_generation_service.py  resume_storage_service.py  scan_service.py  search_service.py  selection_service.py  session_service.py  (+2 more)
backend/src/config/: config_manager.py  settings.py
backend/src/local_analysis/: CLI_REFERENCE.md  QUICK_REFERENCE.md  README.md  __init__.py  code_cli.py  code_parser.py  contribution_analyzer.py  document_analyzer.py  document_cli.py  docx_analyzer.py  git_repo.py  media_analyzer.py  media_cli.py  pdf_cli.py  pdf_parser.py  pdf_summarizer.py  skill_progress_timeline.py
backend/src/models/: database.py
backend/src/repositories/: __init__.py  snapshot_repository.py
backend/src/scanner/: __init__.py  errors.py  media.py  media_types.py  models.py  parser.py  preferences.py  vision.py
backend/src/services/: __init__.py  archive_utils.py  language_stats.py  snapshot_service.py  state.py
backend/tests/: conftest.py  test_profile_routes.py  test_snapshot_service.py
(+1071 files in other folders)
