[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    # Ignore Pydantic v2 deprecation warnings from third-party libraries (gotrue/supabase)
    "ignore:The `update_forward_refs` method is deprecated:DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
