[metadata]
name = capstone-backend
version = 0.1.0
description = Backend services and CLI helpers for the capstone project.

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.9
include_package_data = True
install_requires =
    fastapi
    uvicorn
    supabase==2.0.0
    python-dotenv==1.0.0
    pydantic
    httpx==0.24.0
    openai==1.12.0

[options.packages.find]
where = .
include =
    src
    src.*

[options.entry_points]
console_scripts =
    parse = src.cli.parse_zip:main

[options.extras_require]
vision =
    torch>=2.1.0
    torchvision>=0.16.0
    numpy>=1.24.0
    torchaudio>=2.1.0
    librosa>=0.10.1
    soundfile>=0.12.1
    audioread>=3.0.1
